@startuml
title Foodie — Entity Relationship Diagram (MVP / Sprint 0-3, Supabase Auth)

skinparam entity {
  BackgroundColor white
  BorderColor #333333
}
skinparam note {
  BackgroundColor #FCF8D9
  BorderColor #B8A800
}

entity "auth.users" as AuthUsers <<Supabase-managed>> #E8E8E8 {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(255) <<unique>>
  * encrypted_password : VARCHAR(255)
  created_at : TIMESTAMPTZ
}

entity "Locations" as Locations {
  * Id : INT <<PK>>
  --
  * Name : VARCHAR(100)
  * UserId : UUID <<FK>>
}

entity "FoodItems" as FoodItems {
  * Id : INT <<PK>>
  --
  * Name : VARCHAR(100)
  * Quantity : DECIMAL(10,2)
  * Unit : VARCHAR(20)
  * ExpiryDate : DATE
  LocationId : INT <<FK, nullable>>
  * UserId : UUID <<FK>>
}

AuthUsers ||--o{ Locations : "owns\n(ON DELETE CASCADE)"
AuthUsers ||--o{ FoodItems : "owns\n(ON DELETE CASCADE)"
Locations |o--o{ FoodItems : "stores\n(ON DELETE SET NULL)"

note right of AuthUsers
  Owned and managed entirely by
  Supabase Auth (GoTrue).
  Not created, migrated, or
  written to by our own EF Core
  code — read-only FK target.
  Password hashing, uniqueness,
  and lifecycle are Supabase's
  responsibility, not ours.
end note

note top of FoodItems
  Cardinality notation used above:
  ||--o{   one (mandatory) to many (optional)
  |o--o{   one (optional) to many (optional)
end note

note bottom of FoodItems
  LocationId is nullable at the DB level,
  but required by application-layer
  validation when an item is created.
  This lets a Location be deleted without
  losing FoodItems (they become unassigned
  and can be reassigned later).
end note

note bottom of Locations
  Bullet (*) = NOT NULL (mandatory attribute)
  No bullet = nullable
  <<PK>> = Primary Key, <<FK>> = Foreign Key
  UserId changed from INT to UUID: it is a
  foreign key into Supabase's auth.users.id,
  not a surrogate key we generate ourselves.
end note

footer Foodie | ER Diagram v2.0 (MVP, Supabase Auth) | Sprint 0-3
@enduml